# Telecom_rag

./: README.md  Telecom_data_loader.py  Telecom_rag.ipynb  main.py  pyproject.toml
