[project]
name = "telecom-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.6",
    "langchain-openai>=1.3.3",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.44.0",
    "pandas>=3.0.3",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
]
